# subreddit-knowledge-graph

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  ruff.toml
airflow/: requirements.txt
airflow/dags/: ingest_praw_streaming_dag.py  ingest_pushshift_dag.py
docker/: README.md  docker-compose.yml
docker/airflow/: Dockerfile
docs/superpowers/plans/: 2026-05-27-reddit-kg-pipeline-implementation.md
docs/superpowers/specs/: 2026-05-27-reddit-kg-pipeline-design.md
infra/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
pipeline/: __init__.py
pipeline/common/: __init__.py  config.py  logging.py  storage.py
pipeline/ingestion/: __init__.py  cli.py  kafka_to_bronze.py  praw_producer.py  pushshift_loader.py  schemas.py
tests/: conftest.py
tests/fixtures/: _generate_pushshift_fixture.py  sample_praw_post.json
tests/integration/: test_e2e_bronze.py
tests/unit/common/: test_config.py
tests/unit/ingestion/: test_kafka_to_bronze.py  test_praw_producer.py  test_pushshift_loader.py  test_schemas.py
