[project]
name = "reddit-kg-pipeline"
version = "0.1.0"
description = "Subreddit-agnostic pipeline producing a Community Discourse Knowledge Graph in Neo4j"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Massimo + team" }]

dependencies = [
    # Distributed
    "pyspark==3.5.1",
    "delta-spark==3.2.0",
    "kafka-python==2.0.2",

    # Reddit
    "praw==7.7.1",

    # AWS
    "boto3==1.34.0",
    "s3fs==2024.6.1",

    # Common
    "pydantic==2.8.2",
    "pydantic-settings==2.4.0",
    "structlog==24.4.0",
    "click==8.1.7",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "hypothesis==6.111.0",
    "testcontainers[kafka]==4.7.2",
    "ruff==0.6.2",
    "ipython==8.26.0",
    "jupyter==1.0.0",
]

ml = [
    # Solo per dev locale dei modelli, non in run distribuito
    "transformers==4.44.0",
    "sentence-transformers==3.0.1",
    "gliner==0.2.10",
    "torch==2.4.0",
    "anthropic==0.34.0",
    "langchain-experimental==0.0.65",
    "langchain-anthropic==0.1.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]
